# portly

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
docs/: property-testing.md
scripts/: README.md  install.ps1  install.sh  uninstall.ps1  uninstall.sh
src/: cli.rs  colors.rs  config.rs  details.rs  display.rs  docker.rs  error.rs  framework.rs  main.rs  process.rs  progress.rs  scanner.rs  typo.rs
src/commands/: clean.rs  config.rs  details.rs  kill.rs  list.rs  mod.rs  ps.rs  watch.rs
src/platform/: mock.rs  mod.rs  native.rs  windows.rs
src/snapshots/: portly__display__tests__command_patterns.snap  portly__display__tests__command_special_chars.snap  portly__display__tests__cpu_percent_no_color.snap  portly__display__tests__framework_no_color.snap  portly__display__tests__markers_no_color.snap  portly__display__tests__ports_empty_json.snap  portly__display__tests__ports_json.snap  portly__display__tests__status_no_color.snap  portly__display__tests__truncate_edge_cases.snap  portly__display__tests__uptime_edge_cases.snap  portly__display__tests__uptime_variations.snap
tests/: cli_integration.rs
tests/integration/: mod.rs
tests/scripts/: run_all_tests.ps1  test_install_ps1.ps1  test_install_sh.ps1  test_install_sh.sh  test_uninstall.ps1
