[package]
name = "portly"
version = "0.1.1"
edition = "2024"
authors = ["Sabry Awad <dr.sabry1997@gmail.com>"]
description = "Modern CLI tool for managing local development ports"
license = "MIT"
repository = "https://github.com/sabry-awad97/portly"
keywords = ["cli", "ports", "development", "cross-platform"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4.6.0", features = ["derive", "cargo"] }

# Display
tabled = { version = "0.20.0", features = ["ansi"] }
colored = "3.1.1"
unicode-width = "0.2.0"
terminal_size = "0.4.4"
indicatif = "0.18.4"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"

# Error handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# System info
sysinfo = "0.38.4"
netstat2 = "0.11.2"

# Docker API
bollard = "0.20.2"
tokio = { version = "1", features = ["full"] }

# Utilities
humantime = "2.3.0"
byte-unit = "5.2.0"
dirs = "6.0.0"
ctrlc = "3.5.2"
chrono = "0.4.44"
rayon = "1.11.0"

[dev-dependencies]
proptest = "1.11.0"
insta = "1.47.2"
assert_cmd = "2.0"
predicates = "3.1"
